[tool.poetry]
name = "character-spider-chart-maker"
version = "0.1.0"
description = "Tool to visualize the D&D-like stats of a player's character."
authors = ["Marcello Lamonaca <marcello.lamonaca@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.1.5"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
